@@ -3,6 +3,7 @@ package com.verdantartifice.primalmagick.common.runes;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -15,6 +16,8 @@ import javax.annotation.Nullable;
 
 import com.verdantartifice.primalmagick.PrimalMagick;
 import com.verdantartifice.primalmagick.common.research.CompoundResearchKey;
+import com.verdantartifice.primalmagick.common.research.ResearchManager;
+import com.verdantartifice.primalmagick.common.research.SimpleResearchKey;
 
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.StringTag;
@@ -24,6 +27,8 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.item.enchantment.EnchantmentInstance;
+import net.minecraftforge.registries.ForgeRegistries;
 
 /**
  * Primary access point for rune-related methods.  Also stores registered rune combinations in a
@@ -32,6 +37,8 @@ import net.minecraft.world.item.enchantment.EnchantmentHelper;
  * @author Daedalus4096
  */
 public class RuneManager {
+    public static final IRuneEnchantmentDefinitionSerializer DEFINITION_SERIALIZER = new RuneEnchantmentDefinition.Serializer();
+    protected static final Map<ResourceLocation, RuneEnchantmentDefinition> DEFINITIONS = new HashMap<>();
     protected static final Map<Enchantment, List<Rune>> REGISTRY = new HashMap<>();
     protected static final Map<VerbRune, Set<Enchantment>> VERB_ENCHANTMENTS = new HashMap<>();
     protected static final Map<NounRune, Set<Enchantment>> NOUN_ENCHANTMENTS = new HashMap<>();
@@ -39,10 +46,11 @@ public class RuneManager {
     protected static final Map<Enchantment, CompoundResearchKey> ENCHANTMENT_RESEARCH = new HashMap<>();
     protected static final String RUNE_TAG_NAME = PrimalMagick.MODID + ":runes";
     
+    // FIXME Make private
     public static void registerRuneEnchantment(@Nullable Enchantment enchantment, @Nullable VerbRune verb, @Nullable NounRune noun, @Nullable SourceRune source) {
         if (enchantment != null && verb != null && noun != null && source != null) {
             if (REGISTRY.containsKey(enchantment)) {
-                throw new IllegalArgumentException("Rune enchantment already registered for " + enchantment.getRegistryName().toString());
+                throw new IllegalArgumentException("Rune enchantment already registered for " + ForgeRegistries.ENCHANTMENTS.getKey(enchantment).toString());
             }
             REGISTRY.put(enchantment, Arrays.asList(verb, noun, source));
             VERB_ENCHANTMENTS.computeIfAbsent(verb, r -> new HashSet<>()).add(enchantment);
@@ -51,11 +59,35 @@ public class RuneManager {
         }
     }
     
+    // FIXME Make private
     public static void registerRuneEnchantment(@Nullable Enchantment enchantment, @Nullable VerbRune verb, @Nullable NounRune noun, @Nullable SourceRune source, @Nullable CompoundResearchKey research) {
         registerRuneEnchantment(enchantment, verb, noun, source);
         if (enchantment != null && research != null) {
             ENCHANTMENT_RESEARCH.put(enchantment, research);
         }
+    }
+    
+    public static boolean registerRuneEnchantment(@Nonnull RuneEnchantmentDefinition def) {
+        if (DEFINITIONS.containsKey(def.getId())) {
+            return false;
+        } else {
+            registerRuneEnchantment(def.getResult(), def.getVerb(), def.getNoun(), def.getSource(), def.getRequiredResearch());
+            DEFINITIONS.put(def.getId(), def);
+            return true;
+        }
+    }
+    
+    public static void clearAllRuneEnchantments() {
+        DEFINITIONS.clear();
+        REGISTRY.clear();
+        VERB_ENCHANTMENTS.clear();
+        NOUN_ENCHANTMENTS.clear();
+        SOURCE_ENCHANTMENTS.clear();
+        ENCHANTMENT_RESEARCH.clear();
+    }
+    
+    public static Map<ResourceLocation, RuneEnchantmentDefinition> getAllDefinitions() {
+        return DEFINITIONS;
     }
     
     /**
@@ -101,24 +133,24 @@ public class RuneManager {
      */
     @Nonnull
     public static Map<Enchantment, Integer> getRuneEnchantments(@Nullable List<Rune> runes, @Nullable ItemStack stack, @Nullable Player player, boolean filterIncompatible) {
-        if (runes == null || runes.isEmpty() || stack == null || stack.isEmpty() || player == null) {
+        if (runes == null || runes.isEmpty() || stack == null || stack.isEmpty() || player == null || !checkLimits(runes)) {
             return Collections.emptyMap();
         }
         
-        Map<Enchantment, Integer> retVal = new HashMap<>();
-        
         // Separate out the given runes by type
-        List<VerbRune> verbRunes = runes.stream().filter(r -> r != null && r.getType() == RuneType.VERB).map(r -> (VerbRune)r).collect(Collectors.toList());
-        List<NounRune> nounRunes = runes.stream().filter(r -> r != null && r.getType() == RuneType.NOUN).map(r -> (NounRune)r).collect(Collectors.toList());
-        List<SourceRune> sourceRunes = runes.stream().filter(r -> r != null && r.getType() == RuneType.SOURCE).map(r -> (SourceRune)r).collect(Collectors.toList());
+        List<VerbRune> verbRunes = runes.stream().filter(r -> r != null && r.getType() == RuneType.VERB).map(r -> (VerbRune)r).toList();
+        List<NounRune> nounRunes = runes.stream().filter(r -> r != null && r.getType() == RuneType.NOUN).map(r -> (NounRune)r).toList();
+        List<SourceRune> sourceRunes = runes.stream().filter(r -> r != null && r.getType() == RuneType.SOURCE).map(r -> (SourceRune)r).toList();
         int powerLevel = 1 + (int)runes.stream().filter(r -> r != null && r.getType() == RuneType.POWER).count();
         
         // Iterate through each combination of verb, noun, and source to find enchantments
+        List<EnchantmentInstance> intermediate = new ArrayList<>();
         for (VerbRune verb : verbRunes) {
             for (NounRune noun : nounRunes) {
                 for (SourceRune source : sourceRunes) {
                     // Intersect the sets of enchantments for each verb, noun, and source combination
-                    Set<Enchantment> possibleEnchantments = new HashSet<>(VERB_ENCHANTMENTS.getOrDefault(verb, new HashSet<>()));   // Needs to be mutable
+                    Set<Enchantment> possibleEnchantments = new HashSet<>();
+                    possibleEnchantments.addAll(VERB_ENCHANTMENTS.getOrDefault(verb, Collections.emptySet()));
                     possibleEnchantments.retainAll(NOUN_ENCHANTMENTS.getOrDefault(noun, Collections.emptySet()));
                     possibleEnchantments.retainAll(SOURCE_ENCHANTMENTS.getOrDefault(source, Collections.emptySet()));
                     
@@ -127,17 +159,46 @@ public class RuneManager {
                         // those already found, it meets the minimum power level, and the player has any needed
                         // research, add the enchantment to the result set
                         if ( possible.canEnchant(stack) && 
-                             (!filterIncompatible || EnchantmentHelper.isEnchantmentCompatible(retVal.keySet(), possible)) && 
                              (!ENCHANTMENT_RESEARCH.containsKey(possible) || ENCHANTMENT_RESEARCH.get(possible).isKnownByStrict(player)) &&
                              powerLevel >= possible.getMinLevel() ) {
-                            retVal.put(possible, Math.min(powerLevel, possible.getMaxLevel()));
+                            intermediate.add(new EnchantmentInstance(possible, Math.min(powerLevel, possible.getMaxLevel())));
                         }
                     }
                 }
             }
         }
         
+        // Sort enchantments first by their minimum XP cost (descending) and then by hash code (ascending) to ensure consistent results
+        intermediate.sort(Comparator.<EnchantmentInstance>comparingInt(i -> i.enchantment.getMinCost(i.level)).reversed().thenComparingInt(i -> i.hashCode()));
+        
+        // Add intermediate enchantments to the result map, filtering out incompatible enchantments if appropriate
+        Map<Enchantment, Integer> retVal = new HashMap<>();
+        intermediate.forEach(instance -> {
+            if (!filterIncompatible || EnchantmentHelper.isEnchantmentCompatible(retVal.keySet(), instance.enchantment)) {
+                retVal.put(instance.enchantment, instance.level);
+            }
+        });
+        
         return retVal;
+    }
+    
+    /**
+     * Check that none of the given runes exceed their per-type limits.
+     * 
+     * @param runes the runes to be checked
+     * @return true if the list of runes is within allowed limits, false otherwise
+     */
+    public static boolean checkLimits(@Nonnull List<Rune> runes) {
+        Map<ResourceLocation, Integer> counts = new HashMap<>();
+        for (Rune rune : runes) {
+            if (rune.hasLimit()) {
+                counts.put(rune.getId(), counts.getOrDefault(rune.getId(), 0) + 1);
+                if (counts.getOrDefault(rune.getId(), 0) > rune.getLimit()) {
+                    return false;
+                }
+            }
+        }
+        return true;
     }
     
     /**
@@ -232,5 +293,32 @@ public class RuneManager {
         if (stack != null) {
             stack.removeTagKey(RUNE_TAG_NAME);
         }
+    }
+    
+    /**
+     * Determine whether the given enchantment has a rune combination defined for it.
+     * 
+     * @param enchant the enchantment to query
+     * @return true if the enchantment has a rune combination defined for it, false otherwise
+     */
+    public static boolean hasRuneDefinition(Enchantment enchant) {
+        ResourceLocation loc = ForgeRegistries.ENCHANTMENTS.getKey(enchant);
+        return loc != null && DEFINITIONS.containsKey(loc);
+    }
+    
+    /**
+     * Get the rune combination definition for the given enchant, if any.
+     * 
+     * @param enchant the enchantment to query
+     * @return the rune combination definition for the given enchant, or null if one was not registered
+     */
+    public static RuneEnchantmentDefinition getRuneDefinition(Enchantment enchant) {
+        ResourceLocation loc = ForgeRegistries.ENCHANTMENTS.getKey(enchant);
+        return loc == null ? null : DEFINITIONS.getOrDefault(loc, null);
+    }
+    
+    public static boolean isRuneKnown(Player player, Enchantment enchant, RuneType runeType) {
+        return ResearchManager.isResearchComplete(player, SimpleResearchKey.parseRuneEnchantment(enchant)) || 
+                ResearchManager.isResearchComplete(player, SimpleResearchKey.parsePartialRuneEnchantment(enchant, runeType));
     }
 }
